<resources>
    <string name="app_name">MushroomApp</string>
    <string name="btnLogin">Let\'s Go...</string>
    <string name="imglogin">imgLogin</string>
    <string name="imglogo">imgLogo</string>
    <string name="enviornmental_monitorin_system">ENVIORNMENTAL MONITORIN\nSYSTEM</string>
    <string name="harvesting_time_detection">HARVESTING TIME DETECTION</string>
    <string name="disease_detection">DISEASE DETECTION</string>
    <string name="yield_detection">YIELD DETECTION</string>
    <string name="imgemsimage">imgEMSImage</string>
    <string name="smf">SMF</string>
    <string name="environmental_monitoring_home">Environmental Monitoring Home</string>
    <string name="imghumidity">imgHumidity</string>
    <string name="imgtemp">imgTemp</string>
    <string name="imgco2">imgCo2</string>
    <string name="graph_view">Graph View</string>
    <string name="yield_prediction_recommendation"><![CDATA[Yield Prediction & Recommendation]]></string>
    <string name="imgbtnrefresh">imgBtnRefresh</string>
    <string name="btnnextimg">btnNextImg</string>
    <string name="btnhome">btnHome</string>
    <string name="estimate_monthly_yield_dpending_on_yield_of_first_5_days_kg">Estimate monthly yield dpending on yield of first 5 days. \'Kg\'</string>
    <string name="monthly_yield">Monthly Yield : </string>
    <string name="recommendation">RECOMMENDATION</string>
    <string name="imgbtnrefresh1">imgBtnRefresh</string>
    <string name="todo1">TODO</string>
    <string name="mushroom_diseases">Mushroom Diseases</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="DD_analyze1">Analyze\n(On Cultivarion Bag)</string>
    <string name="DD_analyze2">Analyze\n(On Mushroom Bud)</string>
    <string name="camera">Camera</string>
    <string name="history">history</string>
    <string name="harvest_time_detection">Harvest Time Detection</string>
    <string name="capturedphoto">capturedPhoto</string>
    <string name="historyHTD">History</string>
    <string name="smf_main">SMF</string>
    <string name="smart_mushroom_farming">Smart Mushroom Farming</string>
    <string name="imgbtnrefresh2">imgBtnRefresh</string>
    <string name="todo">TODO</string>
    <string name="test1">TODO</string>
    <string name="history_view">History View</string>
    <string name="to_detect_mushroom_harvest_time">To Detect Mushroom Harvest Time....</string>
    <string name="yield_prediction">Yield Prediction</string>
    <string name="sinhala_header">භාෂාව තෝරන්න</string>
    <string name="english_header">Choose Your Language</string>
    <string name="tamil_header">உங்கள் மொழியை தேர்வு செய்யவும்</string>
    <string name="sinhala_footer">This can later be changed from settings</string>
    <string name="sinhala_footer1">පසුව සැකසුම මගින් වෙනස් කල හැකිය</string>
    <string name="tamil_footer">இதை பின்னர் அமைப்புகளிலிருந்து மாற்றலாம்</string>
    <string name="todo5">TODO</string>
    <string name="sinhala_button">සිංහල</string>
    <string name="tamil_btn">தமிழ்</string>
    <string name="english">English</string>
    <string name="upload">Upload</string>
    <string name="to_detect_mushroom_diseases">To detect Mushroom Diseases......</string>
    <string name="harvest_time_detected">Harvest Time Detected</string>
    <string name="we_identified_when_to_harvest_your_mushroom">We identified when to harvest your mushroom.</string>
    <string name="harvest_time">Harvest Time :</string>
    <string name="expire_date">Expire Date :</string>
    <string name="textview">TextView</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="day_5">Day 5</string>
    <string name="cancel_popup">Cancel</string>
    <string name="ok_popup">Ok</string>
    <string name="temperature_celsius">Temperature + (char) 0x00B0+\'C\'</string>
</resources>