<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LanguageScreen">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#CE468549">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="788dp"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/headerLayout"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-4dp"
        android:background="#E1E4E1">

        <FrameLayout
            android:id="@+id/btnSinhalaLayout"
            android:layout_width="194dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="270dp"
            android:layout_marginEnd="111dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/btnTxtEnglish2"
                android:layout_width="162dp"
                android:layout_height="61dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sinhala_button"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/btnSinhala"
                android:layout_width="163dp"
                android:layout_height="68dp"
                android:layout_marginEnd="132dp"
                android:layout_marginBottom="426dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/todo5"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rounded_transparent"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnEnglishLayout"
            android:layout_width="193dp"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="365dp"
            android:layout_marginEnd="111dp"
            android:foregroundGravity="center|center_horizontal">

            <TextView
                android:id="@+id/btnTxtEnglish"
                android:layout_width="169dp"
                android:layout_height="66dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/english"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/btnEnglish"
                android:layout_width="168dp"
                android:layout_height="72dp"
                android:layout_marginEnd="132dp"
                android:layout_marginBottom="426dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/todo5"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rounded_transparent"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="465dp"
            android:layout_marginEnd="111dp">

            <TextView
                android:id="@+id/btnTxtTamil"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tamil_btn"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/btnTamil"
                android:layout_width="168dp"
                android:layout_height="72dp"
                android:layout_marginEnd="132dp"
                android:layout_marginBottom="426dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/todo5"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rounded_transparent"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/footerContent"
            android:layout_width="wrap_content"
            android:layout_height="153dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="-1dp">

            <TextView
                android:id="@+id/footerEglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/footerSinhala"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="53dp"
                android:layout_marginEnd="47dp"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sinhala_footer"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/footerSinhala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="75dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sinhala_footer1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FooterTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="31dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tamil_footer"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/headerContent"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="0dp">

            <TextView
                android:id="@+id/headerEnglish"
                android:layout_width="285dp"
                android:layout_height="37dp"
                android:layout_above="@+id/headerSinhala"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="72dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="75dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/english_header"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/headerSinhala"
                android:layout_width="232dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="98dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sinhala_header"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/headerTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="58dp"
                android:layout_marginEnd="54dp"
                android:layout_marginBottom="22dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tamil_header"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#CE468549">

    </RelativeLayout>

</RelativeLayout>