<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".environmental.EMSSplash">

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/dradiantgreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/functionTxt"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="156dp"
            android:layout_marginTop="101dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_horizontal"
            android:text="@string/enviornmental_monitorin_system"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="136dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="207dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="73dp"
            android:gravity="center_horizontal"
            android:text="@string/smf"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <RelativeLayout
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/circleforimage"
            android:backgroundTint="#FFFFFF">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/imglogo"
                android:cropToPadding="false"
                app:srcCompat="@drawable/mashroom_icon" />
        </RelativeLayout>
    </RelativeLayout>


    <ImageView
        android:id="@+id/imgEMSsplash"
        android:layout_width="284dp"
        android:layout_height="223dp"
        android:contentDescription="@string/imgemsimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/environmental" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingEMS"
        android:layout_width="307dp"
        android:layout_height="238dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>